src/objects/Poverty_Scorecard__c.object
<CustomObject>
    <description>Poverty scorecard data for a person in our system</description>
    <fields>
        <fullName>Children_Under_Eleven__c</fullName>
        <label>Children Under Eleven</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cooking_Fuel__c</fullName>
        <description>What type of fuel does your household primarily use for cooking?</description>
        <label>Cooking Fuel</label>
        <picklist>
            <picklistValues>
                <fullName>Firewood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charcoal/paraffin/other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>The date/time that the poverty data was created.</description>
        <label>Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Education_Level__c</fullName>
        <description>What is the education level of the head of your household?</description>
        <label>Education Level</label>
        <picklist>
            <picklistValues>
                <fullName>No grade completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Household_Members_Have_Clothes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does every member of your household including children have at least two sets of clothes?</description>
        <label>Household Members Have 2 Sets of Clothes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Household_Members_Have_Shoes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does every member of your household including children have at least one pair of shoes?</description>
        <label>Household Members Have Shoes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owns_Jewelry_Watch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does anyone in your household own any jewelry/watch?</description>
        <label>Owns Jewelry/Watch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owns_Mosquito_Net__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do you have a mosquito net in your household?</description>
        <label>Owns Mosquito Net</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owns_TV_Radio_Cassette__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does your household own a TV/Radio/Cassette?</description>
        <label>Owns TV/Radio/Cassette</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <description>Person with whom this poverty data is associated</description>
        <label>Person</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>Poverty Scorecards</relationshipLabel>
        <relationshipName>Poverty_Scorecards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Poverty_Percentage__c</fullName>
        <description>Calculate the poverty percentage based on the score</description>
        <formula>CASE( Score__c ,
    0, 97.20,
    1, 97.20,
    2, 97.20,
    3, 97.20,
    4, 97.20,
    5, 95.20,
    6, 95.20,
    7, 95.20,
    8, 95.20,
    9, 95.20,
    10, 93.60,
    11, 93.60,
    12, 93.60,
    13, 93.60,
    14, 93.60,
    15, 80.60,
    16, 80.60,
    17, 80.60,
    18, 80.60,
    19, 80.60,
    20, 76.10,
    21, 76.10,
    22, 76.10,
    23, 76.10,
    24, 76.10,
    25, 71.20,
    26, 71.20,
    27, 71.20,
    28, 71.20,
    29, 71.20,
    30, 62.50,
    31, 62.50,
    32, 62.50,
    33, 62.50,
    34, 62.50,
    35, 47.70,
    36, 47.70,
    37, 47.70,
    38, 47.70,
    39, 47.70,
    40, 44.00,
    41, 44.00,
    42, 44.00,
    43, 44.00,
    44, 44.00,
    45, 38.70,
    46, 38.70,
    47, 38.70,
    48, 38.70,
    49, 38.70,
    50, 27.00,
    51, 27.00,
    52, 27.00,
    53, 27.00,
    54, 27.00,
    55, 26.20,
    56, 26.20,
    57, 26.20,
    58, 26.20,
    59, 26.20,
    60, 13.30,
    61, 13.30,
    62, 13.30,
    63, 13.30,
    64, 13.30,
    65, 8.10,
    66, 8.10,
    67, 8.10,
    68, 8.10,
    69, 8.10,
    70, 6.50,
    71, 6.50,
    72, 6.50,
    73, 6.50,
    74, 6.50,
    75, 3.10,
    76, 3.10,
    77, 3.10,
    78, 3.10,
    79, 3.10,
    80, 2.70,
    81, 2.70,
    82, 2.70,
    83, 2.70,
    84, 2.70,
    85, 1.30,
    86, 1.30,
    87, 1.30,
    88, 1.30,
    89, 1.30,
    90, 0.70,
    91, 0.70,
    92, 0.70,
    93, 0.70,
    94, 0.70,
    0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Poverty Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Roof_Material__c</fullName>
        <label>Roof Material</label>
        <picklist>
            <picklistValues>
                <fullName>Thatch/straw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iron sheet/tin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cement/other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <formula>CASE(Roof_Material__c, &apos;Thatch/Straw&apos;, 0, &apos;Iron sheet/tin&apos;, 7, &apos;Cement/other&apos;, 14, 0) +
CASE(Wall_Material__c, &apos;Unburnt bricks&apos;, 0, &apos;Burnt bricks with mud/mud poles&apos;, 7, &apos;Burnt bricks with cement&apos;, 15, 0) +
CASE(Children_Under_Eleven__c, 0, 16, 1, 9, 2, 8, 3, 4, 0) +
CASE(Education_Level__c , &apos;Primary education&apos;, 3, &apos;No grade completed&apos;, 0, 5) +
CASE(Cooking_Fuel__c, &apos;Firewood&apos;, 0, 12) +
IF(Owns_TV_Radio_Cassette__c, 4, 0) +
IF(Owns_Mosquito_Net__c, 3, 0) +
IF(Household_Members_Have_Clothes__c, 12, 0) +
IF(Household_Members_Have_Shoes__c, 14, 0) +
IF(Owns_Jewelry_Watch__c, 7, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Updated_Poverty_Percentage__c</fullName>
        <description>Probability of being poor (living on less than $ 2.50 per day)</description>
        <formula>CASE( Score__c , 
0, 100.00, 
1, 100.00, 
2, 100.00, 
3, 100.00, 
4, 100.00, 
5, 100.00, 
6, 100.00, 
7, 100.00, 
8, 100.00, 
9, 100.00, 
10, 100.00, 
11, 100.00, 
12, 100.00, 
13, 100.00, 
14, 100.00, 
15, 98.80, 
16, 98.80, 
17, 98.80, 
18, 98.80, 
19, 98.80, 
20, 100.00, 
21, 100.00, 
22, 100.00, 
23, 100.00, 
24, 100.00, 
25, 95.50, 
26, 95.50, 
27, 95.50, 
28, 95.50, 
29, 95.50, 
30, 94.80, 
31, 94.80, 
32, 94.80, 
33, 94.80, 
34, 94.80, 
35, 93.00, 
36, 93.00, 
37, 93.00, 
38, 93.00, 
39, 93.00, 
40, 86.50, 
41, 86.50, 
42, 86.50, 
43, 86.50, 
44, 86.50, 
45, 83.70, 
46, 83.70, 
47, 83.70, 
48, 83.70, 
49, 83.70, 
50, 78.10, 
51, 78.10, 
52, 78.10, 
53, 78.10, 
54, 78.10, 
55, 61.50, 
56, 61.50, 
57, 61.50, 
58, 61.50, 
59, 61.50, 
60, 47.40, 
61, 47.40, 
62, 47.40, 
63, 47.40, 
64, 47.40, 
65, 32.10, 
66, 32.10, 
67, 32.10, 
68, 32.10, 
69, 32.10, 
70, 14.30, 
71, 14.30, 
72, 14.30, 
73, 14.30, 
74, 14.30, 
75, 9.30, 
76, 9.30, 
77, 9.30, 
78, 9.30, 
79, 9.30, 
80, 5.70, 
81, 5.70, 
82, 5.70, 
83, 5.70, 
84, 5.70, 
85, 0.00, 
86, 0.00, 
87, 0.00, 
88, 0.00, 
89, 0.00, 
90, 0.00, 
91, 0.00, 
92, 0.00, 
93, 0.00, 
94, 0.00, 
0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Updated Poverty Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wall_Material__c</fullName>
        <label>Wall Material</label>
        <picklist>
            <picklistValues>
                <fullName>Unburnt bricks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burnt bricks with mud/mud poles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burnt bricks with cement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Poverty Scorecard</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Education_Level__c</columns>
        <columns>Household_Members_Have_Clothes__c</columns>
        <columns>Household_Members_Have_Shoes__c</columns>
        <columns>Owns_Jewelry_Watch__c</columns>
        <columns>Owns_Mosquito_Net__c</columns>
        <columns>Owns_TV_Radio_Cassette__c</columns>
        <columns>Roof_Material__c</columns>
        <columns>Poverty_Percentage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PS-{00000000}</displayFormat>
        <label>Poverty Scorecard ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Poverty Scorecards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>